# agent-memory

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/skills/agent-memory/: SKILL.md
docs/superpowers/plans/: 2026-06-10-agent-memory-system.md
docs/superpowers/specs/: 2026-06-10-agent-memory-system-design.md
launchd/: com.krishna.agentmemory.snapshot.plist
scripts/: mechanical_snapshot.py
src/agent_memory/: active.py  config.py  frontmatter.py  graph.py  identity.py  links.py  note.py  notes_write.py  notify.py  search.py  server.py  sessions.py  vault.py
tests/: test_active.py  test_fixes.py  test_frontmatter.py  test_graph.py  test_identity.py  test_links.py  test_note.py  test_notes_write.py  test_notify.py  test_search.py  test_sessions.py  test_vault.py
